# storix

./: .gitignore  dump.rdb
brook/: gatekeeper.json
brook/M1/: brook.conf  config.yml
brook/M4/: brook.conf  jobs-config.yml
jobs/: Cargo.toml
jobs/src/: lib.rs  main.rs
jobs/src/actions/: files_list.rs  mod.rs  user_session.rs
jobs/src/auth/: login.rs  mod.rs  register.rs  roles.rs  session.rs
jobs/src/worker-auth/: main.rs
node/: .env-template  broker.js  package-lock.json  package.json  server-broker.js  server-fs.js  storix-dev-prod.conf  storix-dev.conf  storix.conf
node/classes/: db.js  http.js  job.js  response.js
node/config/: gatekeeper.json  m4-home-config.json
node/db/migrations/: 1760085631_create_users_table.js  1760085632_create_folders_table.js  1760202774_create_function_create_schema.js  1760202774_create_sharded_functions.js  1760202779_create_folders_table.js  1760202780_create_files_table.js  1775083400_update_password_column_users.js
node/db/migrator/: migrator.js
node/jobs/: auth.js
node/src/: server-broker.js  server-fs.js
node/src/broker/: broker.js
web-ui/: .env-template  env.js  index.css  index.html  login.html  package-lock.json  package.json  rollup.config.js
web-ui/components/: storix-actions.js  storix-broker.js  storix-icon.js  storix-toast.js
web-ui/modules/: storix-routes.js  storix-text.js
web-ui/src/: storix-app.js  storix-delete-files.js  storix-files.js  storix-header.js  storix-home.js  storix-login.js  storix-photos.js  storix-preview.js  storix-session.js  storix-upload-files.js
(+40 files in other folders)
