[package]
name = "jobs"
version = "0.1.0"
edition = "2024"

[[bin]]
name="worker-auth"
path="src/worker-auth/main.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
brook-http-worker = { git = "https://github.com/FoxDead12/brook-http-worker.git" }
rand = "0.10.0"
serde = "1.0.228"
serde_json = "1.0.149"
