[package]
name = "jobs"
version = "0.1.0"
edition = "2024"

[[bin]]
name="worker-auth"
path="src/worker-auth/main.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
brook-http-worker = { path = "/Users/dx3/Developer/brook-http-worker" }
chrono = "0.4.44"
rand = "0.10.0"
redis = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.149"
